Read player public games
